welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur() == true) {return true}
                        ^SnakeBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (getDirection() == Direction.EST) {
                ^